--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -19,4 +19,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/title_update_time" />
+    <Button
+        android:layout_marginLeft="10dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/ic_home"
+        android:id="@+id/nav_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp" />
 </RelativeLayout>
