增加每小时天气预报

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.DrawerLayout
+    <com.songmao.dailyweather.View.MyDrawerLayout
         android:fitsSystemWindows="true"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
@@ -35,6 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.design.widget.NavigationView>
-    </android.support.v4.widget.DrawerLayout>
+    </com.songmao.dailyweather.View.MyDrawerLayout>
 </FrameLayout>
 
