--- a/app/src/main/res/layout/city_manager_item.xml
+++ b/app/src/main/res/layout/city_manager_item.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:background="#cac9c9"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:paddingTop="3dp"
+    android:paddingBottom="3dp"
     android:layout_height="wrap_content">
 
     <ImageView
         android:src="@drawable/ic_list_grey600_24dp"
         android:id="@+id/item_image"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="24dp"
         android:layout_height="24dp" />
     <TextView
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_weight="1"
         android:textColor="#484848"
         android:gravity="center_vertical"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/item_city_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
@@ -29,3 +39,4 @@
         android:layout_width="24dp"
         android:layout_height="24dp" />
 </LinearLayout>
+</RelativeLayout>
