--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:paddingTop="40dp"
     android:layout_width="match_parent"
     android:background="#7f269ad0"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="180dp">
 
-    <TextView
-        android:paddingLeft="30dp"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:gravity="center_vertical"
-        android:text="即时天气"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_gravity="center_vertical"
+        android:id="@+id/header_recycler"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
