--- a/app/src/main/res/layout/weather_viewpager.xml
+++ b/app/src/main/res/layout/weather_viewpager.xml
@@ -25,6 +25,11 @@
 
                 <include layout="@layout/now"/>
 
+                <com.songmao.dailyweather.View.HourlyForecast
+                    android:id="@+id/hourly_forecast"
+                    android:background="#00000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <include layout="@layout/forecast"/>
 
                 <include layout="@layout/aqi"/>
