--- a/app/src/main/res/menu/nav_title.xml
+++ b/app/src/main/res/menu/nav_title.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
         <item
-            android:title="添加"
+            android:icon="@drawable/ic_add_black_24dp"
+            android:title="添加城市"
             android:id="@+id/select_city"/>
         <item
-            android:title="地点"
+            android:icon="@drawable/ic_place_black_24dp"
+            android:title="城市管理"
             android:id="@+id/city"/>
-    </group>
+        <item
+            android:title="退出"
+            android:icon="@drawable/ic_exit_to_app_black_24dp"
+            android:id="@+id/quit"/>
 </menu>
