--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <fragment
-        android:name="com.songmao.dailyweather.ChooseAreaFragment"
-        android:id="@+id/choose_area_fragment"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <com.songmao.dailyweather.View.MyDrawerLayout
+        android:fitsSystemWindows="true"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:fitsSystemWindows="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:gravity="center"
+                android:text="请添加城市"
+                android:id="@+id/not_city"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <android.support.v4.view.ViewPager
+                android:fitsSystemWindows="true"
+                android:id="@+id/weather_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <me.relex.circleindicator.CircleIndicator
+                android:layout_margin="15dp"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            app:menu="@menu/nav_title"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.design.widget.NavigationView>
+    </com.songmao.dailyweather.View.MyDrawerLayout>
 </FrameLayout>
+
