--- a/app/src/main/res/layout/add_city.xml
+++ b/app/src/main/res/layout/add_city.xml
@@ -19,7 +19,6 @@
         <TextView
             android:textColor="#fff"
             android:textSize="20sp"
-            android:text="北京"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/title_text"
@@ -32,4 +31,34 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:id="@+id/list_view"/>
+    <LinearLayout
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="16sp"
+            android:paddingLeft="10dp"
+            android:paddingRight="5dp"
+            android:text="当前位置："
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:paddingLeft="5dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <TextView
+                android:visibility="gone"
+                android:textSize="16sp"
+                android:id="@+id/current_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+        <Button
+            android:id="@+id/location_bt"
+            android:text="重新定位"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
