--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:paddingTop="40dp"
     android:layout_width="match_parent"
     android:background="#7f269ad0"
     android:layout_height="180dp">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:id="@+id/header_recycler"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
