--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="20dp"
     android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
     <TextView
+        android:background="@drawable/round"
         android:gravity="center"
         android:textColor="#fff"
         android:id="@+id/header_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
     <TextView
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
         android:textColor="#fff"
         android:id="@+id/header_tmp"
         android:layout_width="match_parent"
